force-app/main/default/objects/Online_Registration__c/Online_Registration__c.object-meta.xml
<CustomObject>
    <description>Enterprise Toronto&#39;s online business registration module - handles data related to business registrations.</description>
    <label>Online Registration</label>
    <nameField>
        <displayFormat>ET-Reg-{000000}</displayFormat>
        <label>ET-Registration Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Online Registrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>