force-app/main/default/objects/Online_Registration__c/fields/Attention_Care_of_INC__c.field-meta.xml
<CustomField>
    <fullName>Attention_Care_of_INC__c</fullName>
    <label>Attention / Care of (INC)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>