force-app/main/default/objects/Online_Registration__c/fields/Auth_Req_Fed_auth__c.field-meta.xml
<CustomField>
    <fullName>Auth_Req_Fed_auth__c</fullName>
    <label>Auth Req (Fed auth)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accept and proceed with filing.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>