force-app/main/default/objects/Online_Registration__c/fields/Business_ID_Number_Corp_Number__c.field-meta.xml
<CustomField>
    <fullName>Business_ID_Number_Corp_Number__c</fullName>
    <label>Business ID Number/Corp Number</label>
    <length>65</length>
    <type>Text</type>
</CustomField>