force-app/main/default/objects/Online_Registration__c/fields/City_BNR_2Iplus__c.field-meta.xml
<CustomField>
    <fullName>City_BNR_2Iplus__c</fullName>
    <label>City (BNR 2I+)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>