force-app/main/default/objects/Online_Registration__c/fields/City_INC_INC__c.field-meta.xml
<CustomField>
    <fullName>City_INC_INC__c</fullName>
    <label>City (INC INC)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>