force-app/main/default/objects/Online_Registration__c/fields/Con_Email__c.field-meta.xml
<CustomField>
    <fullName>Con_Email__c</fullName>
    <formula>Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Con Email</label>
    <type>Text</type>
</CustomField>