force-app/main/default/objects/Online_Registration__c/fields/Contact_Info_SAA_INC__c.field-meta.xml
<CustomField>
    <fullName>Contact_Info_SAA_INC__c</fullName>
    <label>Contact Info SAA (INC)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>