force-app/main/default/objects/Online_Registration__c/fields/Contact_Info_SAA_TDR__c.field-meta.xml
<CustomField>
    <fullName>Contact_Info_SAA_TDR__c</fullName>
    <inlineHelpText>Is the contact Information same as the one provided above?</inlineHelpText>
    <label>Contact Info SAA (TDR)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>