force-app/main/default/objects/Online_Registration__c/fields/Corporation_Name_BNR_2I__c.field-meta.xml
<CustomField>
    <fullName>Corporation_Name_BNR_2I__c</fullName>
    <label>Corporation Name (BNR 2I+)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>