force-app/main/default/objects/Online_Registration__c/fields/Country_BNR_2Iplus__c.field-meta.xml
<CustomField>
    <fullName>Country_BNR_2Iplus__c</fullName>
    <label>Country (BNR 2I+)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>