force-app/main/default/objects/Online_Registration__c/fields/Country_INC_INC__c.field-meta.xml
<CustomField>
    <fullName>Country_INC_INC__c</fullName>
    <label>Country (INC INC)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>