force-app/main/default/objects/Online_Registration__c/fields/Date_of_Registration_Incorporation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Registration_Incorporation__c</fullName>
    <label>Date of Registration / Incorporation</label>
    <type>DateTime</type>
</CustomField>