force-app/main/default/objects/Online_Registration__c/fields/Date_TDR__c.field-meta.xml
<CustomField>
    <fullName>Date_TDR__c</fullName>
    <label>Date (TDR)</label>
    <type>Date</type>
</CustomField>