force-app/main/default/objects/Online_Registration__c/fields/Describe_your_Challenge__c.field-meta.xml
<CustomField>
    <fullName>Describe_your_Challenge__c</fullName>
    <label>Describe your Challenge</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>