force-app/main/default/objects/Online_Registration__c/fields/Description_of_Business_Activity_BNR__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Business_Activity_BNR__c</fullName>
    <label>Description of Business Activity (BNR)</label>
    <type>TextArea</type>
</CustomField>