force-app/main/default/objects/Online_Registration__c/fields/Do_You_Plan_To_Start_Your_Business_NS__c.field-meta.xml
<CustomField>
    <fullName>Do_You_Plan_To_Start_Your_Business_NS__c</fullName>
    <label>Do You Plan To Start Your Business</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>