force-app/main/default/objects/Online_Registration__c/fields/Documents_sending_method_INFO__c.field-meta.xml
<CustomField>
    <fullName>Documents_sending_method_INFO__c</fullName>
    <inlineHelpText>How would you like your document sent to you? Select one method.</inlineHelpText>
    <label>Documents sending method (INFO)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Mail: Additional $3.00 fee applies</fullName>
            </value>
            <value>
                <fullName>In-Person pick up</fullName>
            </value>
            <value>
                <fullName>Courier: Additional $16.00 fee applies</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>