force-app/main/default/objects/Online_Registration__c/fields/Effective_Date_of_Filing__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date_of_Filing__c</fullName>
    <label>Effective Date of Filing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Today&#39;s Date or Next Available Business Date</fullName>
            </value>
            <value>
                <fullName>Future filing date (can be upto 30 days from today&#39;s date)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>