force-app/main/default/objects/Online_Registration__c/fields/Email_Address_of_Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>Email_Address_of_Service_Provider__c</fullName>
    <defaultValue>&quot;etonline@eservicecorp.ca&quot;</defaultValue>
    <description>Email Address of Service Provider- David&#39;s email address</description>
    <label>Email Address of Service Provider</label>
    <type>Email</type>
</CustomField>