force-app/main/default/objects/Online_Registration__c/fields/Email_address_Other__c.field-meta.xml
<CustomField>
    <fullName>Email_address_Other__c</fullName>
    <label>Email address- Other</label>
    <type>Email</type>
</CustomField>