force-app/main/default/objects/Online_Registration__c/fields/Email_Address_TDR__c.field-meta.xml
<CustomField>
    <fullName>Email_Address_TDR__c</fullName>
    <label>Email Address (TDR)</label>
    <type>Email</type>
</CustomField>