force-app/main/default/objects/Online_Registration__c/fields/Email_Email_Req__c.field-meta.xml
<CustomField>
    <fullName>Email_Email_Req__c</fullName>
    <label>Email (Email Req.)</label>
    <type>Email</type>
</CustomField>