force-app/main/default/objects/Online_Registration__c/fields/Email_Follow_up__c.field-meta.xml
<CustomField>
    <fullName>Email_Follow_up__c</fullName>
    <label>Email Follow up</label>
    <type>Email</type>
</CustomField>