force-app/main/default/objects/Online_Registration__c/fields/ET_to_contact_to_Discuss_Assistance__c.field-meta.xml
<CustomField>
    <fullName>ET_to_contact_to_Discuss_Assistance__c</fullName>
    <label>ET to contact to Discuss Assistance?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>