force-app/main/default/objects/Online_Registration__c/fields/ET_to_do_a_story_on_your_Busines__c.field-meta.xml
<CustomField>
    <fullName>ET_to_do_a_story_on_your_Busines__c</fullName>
    <label>ET to do a story on your Business?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>