force-app/main/default/objects/Online_Registration__c/fields/First_Name_Auth_BNR__c.field-meta.xml
<CustomField>
    <fullName>First_Name_Auth_BNR__c</fullName>
    <label>First Name (Auth BNR)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>