force-app/main/default/objects/Online_Registration__c/fields/Fixed_Number_of_Directors__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Number_of_Directors__c</fullName>
    <label>Fixed Number of Directors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>