force-app/main/default/objects/Online_Registration__c/fields/Form_of_ID_INFO__c.field-meta.xml
<CustomField>
    <fullName>Form_of_ID_INFO__c</fullName>
    <inlineHelpText>What form of ID will you be providing? Select two, one must be picture ID.</inlineHelpText>
    <label>What form of ID will you be providing</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Drivers License</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>Health Card</fullName>
            </value>
            <value>
                <fullName>Residency Card</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>