force-app/main/default/objects/Online_Registration__c/fields/Have_you_Hired_Additional_Staff__c.field-meta.xml
<CustomField>
    <fullName>Have_you_Hired_Additional_Staff__c</fullName>
    <label>Have you Hired Additional Staff?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>