force-app/main/default/objects/Online_Registration__c/fields/Hired_Additional_Staff_since_engaged_ET__c.field-meta.xml
<CustomField>
    <fullName>Hired_Additional_Staff_since_engaged_ET__c</fullName>
    <label>Hired Additional Staff since engaged ET?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>