force-app/main/default/objects/Online_Registration__c/fields/How_did_ET_Help__c.field-meta.xml
<CustomField>
    <fullName>How_did_ET_Help__c</fullName>
    <label>How did ET Help?</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>