force-app/main/default/objects/Online_Registration__c/fields/How_did_ET_help_Existing__c.field-meta.xml
<CustomField>
    <fullName>How_did_ET_help_Existing__c</fullName>
    <label>How did ET help?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>