force-app/main/default/objects/Online_Registration__c/fields/How_many_partners_BNR__c.field-meta.xml
<CustomField>
    <fullName>How_many_partners_BNR__c</fullName>
    <label>How many partners (BNR)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>