force-app/main/default/objects/Online_Registration__c/fields/How_Many_People_Work_in_your_Business__c.field-meta.xml
<CustomField>
    <fullName>How_Many_People_Work_in_your_Business__c</fullName>
    <label>How Many People Work in your Business?</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>