force-app/main/default/objects/Online_Registration__c/fields/If_Yes_How_Many_Additional_Staff_existin__c.field-meta.xml
<CustomField>
    <fullName>If_Yes_How_Many_Additional_Staff_existin__c</fullName>
    <label>If Yes, How Many Additional Staff?</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>