force-app/main/default/objects/Online_Registration__c/fields/Incorporator_is_Corporation_INC_INC__c.field-meta.xml
<CustomField>
    <fullName>Incorporator_is_Corporation_INC_INC__c</fullName>
    <inlineHelpText>Is the company being incorporated by an existing corporation?</inlineHelpText>
    <label>Incorporator is Corporation (INC INC)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>