force-app/main/default/objects/Online_Registration__c/fields/Increased_Financing_Since_Engaged_ET__c.field-meta.xml
<CustomField>
    <fullName>Increased_Financing_Since_Engaged_ET__c</fullName>
    <label>Increased Financing Since Engaged ET?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>