force-app/main/default/objects/Online_Registration__c/fields/Is_a_partner_a_corporation_BNR_2I__c.field-meta.xml
<CustomField>
    <fullName>Is_a_partner_a_corporation_BNR_2I__c</fullName>
    <label>Is a partner a corporation (BNR 2I+)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>