force-app/main/default/objects/Online_Registration__c/fields/Is_the_contact_Information_same_FollowUp__c.field-meta.xml
<CustomField>
    <fullName>Is_the_contact_Information_same_FollowUp__c</fullName>
    <label>Is the contact Information same?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>