force-app/main/default/objects/Online_Registration__c/fields/Is_there_anything_else_ET_can_help_with__c.field-meta.xml
<CustomField>
    <fullName>Is_there_anything_else_ET_can_help_with__c</fullName>
    <label>Is there anything else ET can help with?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>