force-app/main/default/objects/Online_Registration__c/fields/Jurisdiction_2_Service__c.field-meta.xml
<CustomField>
    <fullName>Jurisdiction_2_Service__c</fullName>
    <label>Jurisdiction 2 (Service)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ontario</fullName>
            </value>
            <value>
                <fullName>Federal</fullName>
            </value>
            <value>
                <fullName>Both Federal and Provincial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>