force-app/main/default/objects/Online_Registration__c/fields/Jurisdiction_3_Service__c.field-meta.xml
<CustomField>
    <fullName>Jurisdiction_3_Service__c</fullName>
    <label>Jurisdiction 3 (Service)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Federal</fullName>
            </value>
            <value>
                <fullName>Provincial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>