force-app/main/default/objects/Online_Registration__c/fields/Last_Name_Auth_Fed__c.field-meta.xml
<CustomField>
    <fullName>Last_Name_Auth_Fed__c</fullName>
    <label>Last Name (Auth Fed)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>