force-app/main/default/objects/Online_Registration__c/fields/Last_Name_Auth_Ont__c.field-meta.xml
<CustomField>
    <fullName>Last_Name_Auth_Ont__c</fullName>
    <label>Last Name (Auth Ont)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>