force-app/main/default/objects/Online_Registration__c/fields/Last_Name_BNR_2Iplus__c.field-meta.xml
<CustomField>
    <fullName>Last_Name_BNR_2Iplus__c</fullName>
    <label>Last Name (BNR 2I+)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>