force-app/main/default/objects/Online_Registration__c/fields/Legal_Ending_of_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Ending_of_Company_Name__c</fullName>
    <label>Legal_Ending_of_Company_Name</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Limited</fullName>
            </value>
            <value>
                <fullName>Limitee</fullName>
            </value>
            <value>
                <fullName>Ltd</fullName>
            </value>
            <value>
                <fullName>Ltee</fullName>
            </value>
            <value>
                <fullName>Incorporated</fullName>
            </value>
            <value>
                <fullName>Incorporee</fullName>
            </value>
            <value>
                <fullName>Inc</fullName>
            </value>
            <value>
                <fullName>Corporation</fullName>
            </value>
            <value>
                <fullName>Corp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>