force-app/main/default/objects/Online_Registration__c/fields/Middle_Name_BNR_2Iplus__c.field-meta.xml
<CustomField>
    <fullName>Middle_Name_BNR_2Iplus__c</fullName>
    <label>Middle Name (BNR 2I+)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>