force-app/main/default/objects/Online_Registration__c/fields/Middle_Name_INC_INC__c.field-meta.xml
<CustomField>
    <fullName>Middle_Name_INC_INC__c</fullName>
    <label>Middle Name (INC INC)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>