force-app/main/default/objects/Online_Registration__c/fields/Moved_to_a_Larger_Location__c.field-meta.xml
<CustomField>
    <fullName>Moved_to_a_Larger_Location__c</fullName>
    <label>Moved to a Larger Location?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>