force-app/main/default/objects/Online_Registration__c/fields/Name_of_Business_or_Corporation__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Business_or_Corporation__c</fullName>
    <label>Name of Business or Corporation</label>
    <length>200</length>
    <type>Text</type>
</CustomField>