force-app/main/default/objects/Online_Registration__c/fields/Name_of_Incorporating_Corp_INC_INC__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Incorporating_Corp_INC_INC__c</fullName>
    <label>Name of Incorporating Corp (INC INC)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>