force-app/main/default/objects/Online_Registration__c/fields/Payment_Option_INFO__c.field-meta.xml
<CustomField>
    <fullName>Payment_Option_INFO__c</fullName>
    <label>Payment Option (INFO)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cash - (Available at Scarborough location only)</fullName>
            </value>
            <value>
                <fullName>Debit - (Available at Scarborough location only)</fullName>
            </value>
            <value>
                <fullName>Credit Card: Mastercard, Visa, AMEX - (All locations)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>