force-app/main/default/objects/Online_Registration__c/fields/Phone_Number_BNR_2Iplus__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number_BNR_2Iplus__c</fullName>
    <label>Phone Number (BNR 2I+)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>