force-app/main/default/objects/Online_Registration__c/fields/Phone_Number_TDR__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number_TDR__c</fullName>
    <label>Phone Number (TDR)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>