force-app/main/default/objects/Online_Registration__c/fields/Plan_to_Hire_New_Staffs_in_Next_6_Months__c.field-meta.xml
<CustomField>
    <fullName>Plan_to_Hire_New_Staffs_in_Next_6_Months__c</fullName>
    <label>Plan to Hire New Staff in Next 6 Months?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>