force-app/main/default/objects/Online_Registration__c/fields/Plan_to_Start_in_the_Next_Year_NS__c.field-meta.xml
<CustomField>
    <fullName>Plan_to_Start_in_the_Next_Year_NS__c</fullName>
    <label>Plan to Start in the Next Year?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>