force-app/main/default/objects/Online_Registration__c/fields/Postal_Code_BNR_2Iplus__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code_BNR_2Iplus__c</fullName>
    <label>Postal Code (BNR 2I+)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>