force-app/main/default/objects/Online_Registration__c/fields/Postal_Code_INC_INC__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code_INC_INC__c</fullName>
    <label>Postal Code (INC INC)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>