force-app/main/default/objects/Online_Registration__c/fields/Provide_Email_Email__c.field-meta.xml
<CustomField>
    <fullName>Provide_Email_Email__c</fullName>
    <label>Provide Email (Email)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>