force-app/main/default/objects/Online_Registration__c/fields/Province_BNR_2Iplus__c.field-meta.xml
<CustomField>
    <fullName>Province_BNR_2Iplus__c</fullName>
    <label>Province (BNR 2I+)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>