force-app/main/default/objects/Online_Registration__c/fields/Province_INC_INC__c.field-meta.xml
<CustomField>
    <fullName>Province_INC_INC__c</fullName>
    <label>Province (INC INC)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>